--- a/app/src/main/res/layout/item_class.xml
+++ b/app/src/main/res/layout/item_class.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@color/F7FFF3"
+    android:clickable="true"
+    app:cardElevation="0dp"
+
     >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/fbfff9"
         android:orientation="horizontal"
-        android:padding="20dp">
+        android:padding="10dp">
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            app:cardCornerRadius="30dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            app:cardCornerRadius="45dp"
             app:cardElevation="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -30,28 +34,33 @@
                 android:src="@drawable/ic_launcher_foreground" />
         </androidx.cardview.widget.CardView>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
-            android:orientation="vertical"
-            android:gravity="center_vertical"
-            >
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/firstName"
+                android:id="@+id/schoolClassTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                app:layout_constraintStart_toStartOf="parent" />
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/lastName"
+                android:id="@+id/schoolTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:layout_marginTop="5dp"
+                android:text="TextView"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent" />
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+        </LinearLayout>
+
+
     </LinearLayout>
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
