--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_classes">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.example.alfa_bank_android_app_teacher.ui.home.HomeFragment"
+        android:id="@+id/nav_classes"
+        android:name="com.example.alfa_bank_android_app_teacher.ui.classes.ClassesFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_classes" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.alfa_bank_android_app_teacher.ui.gallery.GalleryFragment"
+        android:id="@+id/nav_notification"
+        android:name="com.example.alfa_bank_android_app_teacher.ui.notification.NotificationFragment"
         android:label="@string/menu_gallery"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.alfa_bank_android_app_teacher.ui.slideshow.SlideshowFragment"
+        android:id="@+id/nav_setting"
+        android:name="com.example.alfa_bank_android_app_teacher.ui.setting.SettingFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
 </navigation>
