--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="A7D7AF">#A7D7AF</color>
+    <color name="F7FFF3">#F7FFF3</color>
+    <color name="fbfff9">#FBFFF9</color>
+    <color name="Transperent">#FFFFFF</color>
+    <color name="a7d7af">#a7d7af</color>
+    <color name="eafbe2">#eafbe2</color>
+    <color name="od9a00">#0d9a00</color>
+    <color name="FF95AE">#FF95AE</color>
+    <color name="FEFFC1">#FEFFC1</color>
+    <color name="D6EFFE">#D6EFFE</color>
+    <color name="FFD6DF">#FFD6DF</color>
 </resources>
