--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/students"
+                android:text="@string/my_classes"
                 android:layout_gravity="center"
                 android:id="@+id/toolbar_title"
                 android:textSize="18sp"
