--- a/app/src/main/res/layout/activity_child.xml
+++ b/app/src/main/res/layout/activity_child.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button2" >
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/breakfast"
             android:textAlignment="center"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
