--- a/app/src/main/res/layout/activity_child.xml
+++ b/app/src/main/res/layout/activity_child.xml
@@ -50,39 +50,28 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="Отправить заявку на перерасчёт"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarParent" />
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="5dp"
         app:cardBackgroundColor="@color/FEFFC1"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" >
+        app:layout_constraintTop_toBottomOf="@+id/appBarParent">
 
         <TextView
             android:id="@+id/breakfast"
-            android:textAlignment="center"
-            android:layout_width="80dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="Завтрак"
-            android:paddingVertical="4dp"
             android:paddingHorizontal="12dp"
-            android:textSize="12sp"/>
+            android:paddingVertical="4dp"
+            android:text="Завтрак"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -100,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
         app:cardElevation="0dp"
@@ -108,15 +97,15 @@
         app:cardBackgroundColor="@color/D6EFFE">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/dinner"
             android:textAlignment="center"
-            android:layout_width="80dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="Обед"
             android:paddingVertical="4dp"
 
-            android:textSize="12sp" />
+            android:textSize="16sp" />
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -141,14 +130,14 @@
         app:cardBackgroundColor="@color/FFD6DF">
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/snack"
             android:textAlignment="center"
-            android:layout_width="80dp"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:text="Полдник"
             android:paddingVertical="4dp"
-            android:textSize="12sp"
+            android:textSize="16sp"
 
             />
     </androidx.cardview.widget.CardView>
