--- a/app/src/main/res/layout/item_children.xml
+++ b/app/src/main/res/layout/item_children.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/fbfff9"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:paddingVertical="10dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
@@ -154,6 +154,34 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="@string/afternoon_snack"
+                        android:textColor="@color/black"
+                        android:textSize="12sp" />
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/doesnotEatMaterialCardView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="0dp"
+                android:layout_marginBottom="8dp"
+                app:cardBackgroundColor="@color/FF95AE"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="0dp"
+                app:contentPadding="4dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/afternoonSnackMaterialCardView">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Не питается"
                         android:textColor="@color/black"
                         android:textSize="12sp" />
                 </LinearLayout>
