--- a/app/src/main/res/layout/activity_child.xml
+++ b/app/src/main/res/layout/activity_child.xml
@@ -59,11 +59,12 @@
         app:cardBackgroundColor="@color/FEFFC1"
         app:cardCornerRadius="5dp"
         app:cardElevation="0dp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarParent">
 
         <TextView
-            android:id="@+id/breakfast"
+            android:id="@+id/breakfastText"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:paddingHorizontal="12dp"
@@ -75,6 +76,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -94,10 +96,11 @@
         app:layout_constraintTop_toBottomOf="@+id/recyclerView"
         app:cardElevation="0dp"
         app:cardCornerRadius="5dp"
+        android:visibility="gone"
         app:cardBackgroundColor="@color/D6EFFE">
 
         <TextView
-            android:id="@+id/dinner"
+            android:id="@+id/dinnerText"
             android:textAlignment="center"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
@@ -109,6 +112,7 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/recycler_view_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -126,11 +130,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_2"
         app:cardElevation="0dp"
+        android:visibility="gone"
         app:cardCornerRadius="5dp"
         app:cardBackgroundColor="@color/FFD6DF">
 
         <TextView
-            android:id="@+id/snack"
+            android:id="@+id/snackText"
             android:textAlignment="center"
             android:layout_width="90dp"
             android:layout_height="wrap_content"
@@ -147,13 +152,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView4" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:visibility="gone"
+        android:id="@+id/imageViewBreakfast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -163,7 +169,8 @@
         app:srcCompat="@drawable/ic_pencil_line" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:visibility="gone"
+        android:id="@+id/imageViewDinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -173,10 +180,11 @@
         app:srcCompat="@drawable/ic_pencil_line" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageViewSnack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/cardView4"
         app:layout_constraintStart_toEndOf="@+id/cardView4"
         app:layout_constraintTop_toTopOf="@+id/cardView4"
